--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -21,6 +21,7 @@
     "com.unity.visualscripting": "1.9.1",
     "com.unity.xr.legacyinputhelpers": "2.1.10",
     "com.unity.xr.management": "4.4.1",
+    "com.unity.xr.mock-hmd": "1.3.1-preview.1",
     "com.unity.xr.oculus": "4.1.2",
     "com.unity.xr.openxr": "1.9.1",
     "com.unity.modules.ai": "1.0.0",
